GNOME Bugzilla – Bug 762566
can't start builder from desktop file
Last modified: 2016-03-12 23:52:16 UTC
Trying to start gnome-builder from the application menu fails. The log reveals the following: feb 23 22:07:37 host /usr/libexec/gdm-x-session[24061]: Activating service name='org.gnome.Builder' feb 23 22:07:37 host /usr/libexec/gdm-x-session[24061]: Activated service 'org.gnome.Builder' failed: Process org.gnome.Builder exited with status 1 feb 23 22:07:37 host org.gnome.Builder[24081]: Unknown option --gapplication-service This started somewhere along the 3.19 development cycle, worked fine in 3.18 .
Created attachment 322186 [details] [review] app: add custom handling of --gapplication-service Since we are not relying on GApplication for command line parsing, we need to handle --gapplication-service ourself. This fixes launching of Builder from the application overview.
Looks like fallout from our switch to doing custom command line parsing. This emulates what GApplication would have done for us with --gapplication-service.
Attachment 322186 [details] pushed as b81fe61 - app: add custom handling of --gapplication-service