app: add custom handling of --gapplication-service

Since we are not relying on GApplication for command line parsing, we need
to handle --gapplication-service ourself. This fixes launching of Builder
from the application overview.

https://bugzilla.gnome.org/show_bug.cgi?id=762566